Fix UI style dice-container not align center problem

--- a/src/style/dice.less
+++ b/src/style/dice.less
@@ -21,10 +21,6 @@
         padding-bottom: 20px;
     }
     .currency-bar {
-        // display: flex;
-        display: inline-block;
-        vertical-align: top;
-
         @media @phone{
             display: flex;
         }
@@ -100,7 +96,6 @@
         .inner-shadow( 0 -240px 240px 0 rgba(0, 0, 0, .3), 0 40px 80px rgba(0, 0, 0, .9));
         position: relative;
         text-align: center;
-        display: inline-block;
 
         @media @phone{
             width:100%;
