--- a/src/style/topbar.less
+++ b/src/style/topbar.less
@@ -302,7 +302,7 @@ ul.menu-list {
             display: block;
             height: 100%;
             color:@menuColor;
-            font-weight: 600;
+            font-weight: 500;
 
             i {
                 padding-left: 6px;
